# pypotato-ast

./: README.md  pyproject.toml  test.py
pypotatoast/: __main__.py
pypotatoast/analyzers/: base.py
